# my_sp_main

./: CMakeLists.txt  README.md  autostart_sp_vision.sh
calibration/: capture_gimbal.cpp
configs/: calibration.yaml  camera.yaml  demo.yaml  example.yaml  sentry.yaml
io/: CMakeLists.txt
io/daheng/: daheng.cpp  daheng.hpp
io/gimbal/: gimbal.cpp
scripts/: autostart_sp_vision.sh
src/: auto_aim_debug_mpc.cpp  sentry_multithread.cpp  standard_mpc.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  shooter.cpp  shooter.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_aim/yolos/: yolov5.cu  yolov5.hpp
tasks/auto_buff/: CMakeLists.txt
tests/: auto_aim_mutithread.cpp  auto_aim_test.cpp  auto_aim_test_2.cpp  auto_aim_test_all.cpp  camera_test.cpp
